backend/src/main/java/com/example/backend/error/trade/InsufficientFundsException.java
package com.example.backend.error.trade;

public class InsufficientFundsException extends RuntimeException {
    
    public InsufficientFundsException(String message) {
        super(message);
    }
    
}
